--- a/SZ40/SZ40/SZ40.csproj
+++ b/SZ40/SZ40/SZ40.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Identificators.cs" />
+    <Compile Include="StartRotatesPosition.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
