--- a/SZ40/SZ40/SZ40.csproj
+++ b/SZ40/SZ40/SZ40.csproj
@@ -38,11 +38,6 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Rotors\Functions.cs" />
-    <Compile Include="Rotors\InitTable.cs" />
-    <Compile Include="Rotors\IRotor.cs" />
-    <Compile Include="Rotors\Mashine.cs" />
-    <Compile Include="Rotors\pRotor.cs" />
     <Compile Include="StartRotatesPosition.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -53,7 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Teletype.cs" />
-    <Compile Include="Rotors\xRotor.cs" />
+    <Compile Include="Translator.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -78,6 +73,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rotors\Rotors.csproj">
+      <Project>{69fe3185-cd87-4a1b-8bd1-97468abfde5c}</Project>
+      <Name>Rotors</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
