--- a/MSMQ/DistributedPasswordBrute/RequestManager/RequestManager.csproj
+++ b/MSMQ/DistributedPasswordBrute/RequestManager/RequestManager.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="GUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestAdapter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
