--- a/MSMQ/DistributedPasswordBrute/MsmqAdapters/MsmqAdapters.csproj
+++ b/MSMQ/DistributedPasswordBrute/MsmqAdapters/MsmqAdapters.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MsmqReplyAdapter.cs" />
+    <Compile Include="MsmqReplierAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MsmqRequestAdapter.cs" />
   </ItemGroup>
