--- a/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
+++ b/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manager.cs" />
