--- a/MSMQ/DistributedPasswordBrute/AgentRepresentor/AgentRepresentor.csproj
+++ b/MSMQ/DistributedPasswordBrute/AgentRepresentor/AgentRepresentor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E7AF81DF-F96D-43C1-B8CB-9EA97CC9DDA0}</ProjectGuid>
+    <ProjectGuid>{6896AB58-6AFB-44AF-8C17-C6B48D754D32}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ManagerRepresentor</RootNamespace>
-    <AssemblyName>ManagerRepresentor</AssemblyName>
+    <RootNamespace>AgentRepresentor</RootNamespace>
+    <AssemblyName>AgentRepresentor</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,17 +36,20 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ManagerRepresentor.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Manager\Manager.csproj">
-      <Project>{d8ddc4bd-40bb-40fc-9612-26ac63f63335}</Project>
-      <Name>Manager</Name>
+    <ProjectReference Include="..\Agent\Agent.csproj">
+      <Project>{29662A2B-F083-49DD-A074-65EE816B3FB2}</Project>
+      <Name>Agent</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MsmqAdapters\MsmqAdapters.csproj">
+      <Project>{254dff87-a576-4b82-83b9-d335c098e2f7}</Project>
+      <Name>MsmqAdapters</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
