--- a/MSMQ/DistributedPasswordBrute/AgentRepresentor/AgentRepresentor.csproj
+++ b/MSMQ/DistributedPasswordBrute/AgentRepresentor/AgentRepresentor.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Messaging" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
