--- a/MSMQ/DistributedPasswordBrute/MsmqAdapters/MsmqAdapters.csproj
+++ b/MSMQ/DistributedPasswordBrute/MsmqAdapters/MsmqAdapters.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Messaging" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MsmqReplierAdapter.cs" />
