--- a/MSMQ/DistributedPasswordBrute/Tests/Tests.csproj
+++ b/MSMQ/DistributedPasswordBrute/Tests/Tests.csproj
@@ -30,21 +30,36 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Libs\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Agent.Test.cs" />
+    <Compile Include="MsmqReplierAdapter.Tests.cs" />
+    <Compile Include="MsmqRequestAdapter.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Agent\Agent.csproj">
       <Project>{cc354fed-b083-4234-b9b6-95c5375af8cb}</Project>
       <Name>Agent</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ManagerRepresentor\ManagerRepresentor.csproj">
+      <Project>{e7af81df-f96d-43c1-b8cb-9ea97cc9dda0}</Project>
+      <Name>ManagerRepresentor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Manager\Manager.csproj">
+      <Project>{d8ddc4bd-40bb-40fc-9612-26ac63f63335}</Project>
+      <Name>Manager</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MsmqAdapters\MsmqAdapters.csproj">
+      <Project>{254dff87-a576-4b82-83b9-d335c098e2f7}</Project>
+      <Name>MsmqAdapters</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
