Изменил получение следущего конца диапазона и тесты к этой штуке

--- a/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
+++ b/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manager.cs" />
+    <Compile Include="NextWord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
