Подправил коментарии, исправил ошибки, мусор вынес и с собакой погулял(разнес по файлам функционал)

--- a/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
+++ b/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
@@ -35,8 +35,9 @@
     <Reference Include="System.Messaging" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsgInProcess.cs" />
     <Compile Include="Manager.cs" />
-    <Compile Include="NextWord.cs" />
+    <Compile Include="NextDiapazone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
