Много рефакторинга (в Manager оставил закомментированный свой вариант кода)

--- a/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
+++ b/MSMQ/DistributedPasswordBrute/Manager/Manager.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <Compile Include="MsgInProcess.cs" />
     <Compile Include="Manager.cs" />
-    <Compile Include="NextDiapazone.cs" />
+    <Compile Include="NextDiapasone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
